[gd_scene load_steps=7 format=3 uid="uid://da6cdgjo4t7vh"]

[ext_resource type="Script" path="res://constructions/visual_editor/construction_visual_editor.gd" id="1_ttw77"]
[ext_resource type="Material" uid="uid://d2runuquv7rfe" path="res://constructions/monocolor_glow.tres" id="2_fmgxt"]
[ext_resource type="Script" path="res://constructions/visual_editor/gui/cve_preview.gd" id="2_lrnp6"]
[ext_resource type="Script" path="res://constructions/visual_editor/gui/cve_patterns_styles_button.gd" id="3_v2ya0"]
[ext_resource type="Material" uid="uid://6ln7hj8262ws" path="res://experimental/costruction_background/construction_background.tres" id="4_cl4px"]
[ext_resource type="Script" path="res://constructions/visual/construction_background.gd" id="5_vo2kk"]

[node name="ConstructionVisualEditor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ttw77")
grid_path = NodePath("VBoxContainer/HBoxContainer/Grid")
preview_path = NodePath("VBoxContainer/HBoxContainer/Preview")
grid_size = 11
cell_size = 40

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -41.5
offset_top = -57.0
offset_right = 41.5
offset_bottom = 57.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Grid" type="GridContainer" parent="VBoxContainer/HBoxContainer"]
material = ExtResource("2_fmgxt")
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/h_separation = 2
theme_override_constants/v_separation = 2
columns = 11

[node name="Preview" type="Control" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(440, 440)
layout_mode = 2
script = ExtResource("2_lrnp6")

[node name="ConstructionBackground" type="Node2D" parent="VBoxContainer/HBoxContainer/Preview"]
material = ExtResource("4_cl4px")
script = ExtResource("5_vo2kk")

[node name="Control" type="Control" parent="VBoxContainer/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(270, 270)
layout_mode = 2

[node name="SubViewportContainer" type="SubViewportContainer" parent="VBoxContainer/HBoxContainer/Control"]
layout_mode = 0
offset_right = 250.0
offset_bottom = 250.0

[node name="SubViewport" type="SubViewport" parent="VBoxContainer/HBoxContainer/Control/SubViewportContainer"]
disable_3d = true
transparent_bg = true
handle_input_locally = false
size = Vector2i(440, 440)
render_target_update_mode = 0

[node name="CVE_PatternsStyleButton" type="MenuButton" parent="VBoxContainer"]
layout_mode = 2
text = "Select style"
item_count = 2
popup/item_0/text = "rounded"
popup/item_0/id = 0
popup/item_1/text = "simple_rounded"
popup/item_1/id = 1
script = ExtResource("3_v2ya0")

[node name="Generate" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Generate"

[node name="Debug" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Debug"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="SaveShader" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Save shader"

[node name="Test" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Test"

[connection signal="resized" from="VBoxContainer/HBoxContainer/Preview" to="VBoxContainer/HBoxContainer/Preview" method="_on_resized"]
[connection signal="style_selected" from="VBoxContainer/CVE_PatternsStyleButton" to="." method="_on_cve_patterns_style_button_style_selected"]
[connection signal="pressed" from="VBoxContainer/Generate" to="." method="_on_generate_pressed"]
[connection signal="pressed" from="VBoxContainer/Debug" to="." method="_on_debug_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/SaveShader" to="VBoxContainer/HBoxContainer/Preview" method="_on_save_shader_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Test" to="." method="_on_test_pressed"]
